# multiglob

./: Cargo.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: builder.rs  cluster.rs  dir.rs  lib.rs  main.rs  util.rs  walk.rs
src/tests/: mod.rs  test_recursive.rs  test_walk.rs  util.rs
src/tests/snapshots/: multiglob__walk__tests__walk_plan_node-2.snap  multiglob__walk__tests__walk_plan_node.snap
