[package]
name = "multiglob"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Smirnov <aldanor@users.noreply.github.com>"]
license = "MIT or Apache-2.0"
repository = "https://github.com/aldanor/multiglob"
homepage = "https://github.com/aldanor/multiglob"
documentation = "https://docs.rs/multiglob"
categories = ["filesystem"]
keywords = ["glob", "walk", "pattern", "directory", "recursive"]
readme = "README.md"
resolver = "2"
rust-version = "1.81"

[dependencies]
globset = "0.4"
walkdir = "2.5"
# debugging
log = { version = "0.4", features = ["kv"] }
env_logger = { version = "0.11", features = ["kv"] }

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1"

[dev-dependencies]
ctor = "0.4"
current_dir = "0.1"
insta = "1.43"
rstest = "0.25"
tempfile = "3"
